# segmap-simplified

./: .gitignore  dependencies.rosinstall
segmapper/: package.xml
segmapper/launch/: segmapper.launch
segmapper/launch/kitti/: ZGSLAM_multi.launch  ZGSLAM_multi.yaml  campus_loop_closure_multi.launch  campus_loop_closure_multi.yaml  campus_loop_closure_remote.launch  campus_loop_closure_remote.yaml  input_filters_outdoor.yaml  input_filters_outdoor_ZGSLAM.yaml  input_filters_outdoor_remote.yaml  kitti_localization.launch  kitti_loop_closure_multi.launch  kitti_loop_closure_multi.rviz  kitti_loop_closure_multi.yaml  kitti_loop_closure_multi_a.rviz  kitti_loop_closure_original.launch  kitti_loop_closure_original.rviz  kitti_loop_closure_original.yaml  outlets_loop_closure_multi.launch  outlets_loop_closure_multi.yaml  (+8 more)
segmapper/src/: segmapper.cpp
segmatch/: package.xml
segmatch/include/segmatch/: dynamic_voxel_grid.hpp
segmatch/include/segmatch/impl/: dynamic_voxel_grid.hpp  local_map.hpp
segmatch/include/segmatch/segmenters/impl/: euclidean_segmenter.hpp  incremental_segmenter.hpp
segmatch/src/: opencv_random_forest.cpp  segmatch.cpp
segmatch/src/descriptors/: descriptors.cpp
segmatch_ros/: package.xml
segmatch_ros/src/: segmatch_worker.cpp
tools/: create_bag_add_timestamp_test.py  cut.py  cut_and_add_prefix.py  filter_bag.py  read_pointcloud_message.py  reorder_bag_based_on_header_timestamps.py  reverse_bag.py  ros_readbagfile.py
tools/tools_from_original_repo/: add_header_time_offset.py  remap_bag.py  remove_tf_from_bag.py
